# tlc591xx-python

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: tlc59108_blink.py  tlc59108_fade.py  tlc59108_hw_blink.py  tlc59108_hw_dim.py
src/tlc591xx/: __init__.py
tests/: conftest.py  test_hardware.py  test_unit.py
