[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlc591xx"
version = "0.1.0"
description = "Python library for the TLC59108 and TLC59116 constant-current LED sink driver"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "smbus2>=0.4",
]
authors = [
    { name = "Jonas Höchst", email = "hoechst@trackit.systems" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/trackIT-Systems/tlc591xx-python"
Repository = "https://github.com/trackIT-Systems/tlc591xx-python"
Issues = "https://github.com/trackIT-Systems/tlc591xx-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "hardware: requires a TLC591xx on I2C; set TLC591XX_I2C_BUS (and optional TLC591XX_ADDRESS, TLC591XX_MODEL)",
]
